# whocall

./: .gitignore  Cargo.toml  README.md  install-whocall.sh  install-whoimpl.sh
.github/workflows/: ci.yml  integration.yml  npm.yml  release.yml  showcase-go.yml  showcase-python.yml  showcase-rust.yml  showcase.yml
crates/ast-call-cli/: Cargo.toml
crates/ast-call-cli/src/: cmd_callers.rs  cmd_def.rs  cmd_impact.rs  cmd_impl.rs  cmd_index.rs  cmd_refs.rs  main.rs  output.rs
crates/ast-call-core/: Cargo.toml
crates/ast-call-core/src/: error.rs  index.rs  lang.rs  refs.rs  resolve.rs  symbol.rs  target.rs
crates/ast-call-lang-rust/: Cargo.toml
crates/ast-call-lang-rust/src/: lib.rs  parser.rs
crates/who-cli/: Cargo.toml
crates/who-cli/src/: bin_whocall.rs  bin_whoimpl.rs  cmd_callers.rs  cmd_def.rs  cmd_impact.rs  cmd_impl.rs  cmd_index.rs  cmd_refs.rs  main.rs  output.rs
crates/who-core/: Cargo.toml
crates/who-core/src/: calls.rs  confidence.rs  error.rs  index.rs  lib.rs  resolve.rs  target.rs
crates/who-lang-go/: Cargo.toml
crates/who-lang-go/src/: lib.rs  parser.rs
crates/who-lang-js/: Cargo.toml
crates/who-lang-js/src/: lib.rs  parser.rs
crates/who-lang-python/: Cargo.toml
crates/who-lang-python/src/: lib.rs  parser.rs
crates/who-lang-rust/: Cargo.toml
crates/who-lang-rust/src/: parser.rs
crates/who-lang-ts/src/: parser.rs
docs/: ARCHITECTURE.md
npm/whocall/: install.js  package.json
npm/whocall-cli/: package.json  run.js
npm/whoimpl/: install.js  package.json
npm/whoimpl-cli/: package.json  run.js
samples/go-project/: main.go
samples/go-project/pkg/: animal.go  utils.go
samples/js-project/src/: animal.js  edge_cases.js  main.js  utils.js
samples/python-project/src/: base.py  edge_cases.py  main.py  models.py  utils.py
samples/rust-project/.who/: index.sqlite  metadata.json
samples/rust-project/src/: base_trait.rs  main.rs  traits.rs
samples/rust-project/src/text/: highlight.rs  mod.rs  render.rs  unicode.rs
samples/rust-project/tests/: render_test.rs
samples/ts-project/src/: edge_cases.ts
