[workspace]
resolver = "2"
members = [
    "crates/who-core",
    "crates/who-cli",
    "crates/who-lang-rust",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "MIT"

[workspace.dependencies]
who-core = { path = "crates/who-core" }
who-lang-rust = { path = "crates/who-lang-rust" }

tree-sitter = "0.24"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
walkdir = "2"
anyhow = "1"
thiserror = "2"
