[workspace]
resolver = "2"
members = [
    "crates/who-core",
    "crates/who-cli",
    "crates/who-lang-rust",
    "crates/who-lang-python",
    "crates/who-lang-go",
    "crates/who-lang-ts",
    "crates/who-lang-js",
]

[workspace.package]
version = "0.0.25"
edition = "2021"
license = "MIT"

[workspace.dependencies]
who-core = { path = "crates/who-core" }
who-lang-rust = { path = "crates/who-lang-rust" }
who-lang-python = { path = "crates/who-lang-python" }
who-lang-go = { path = "crates/who-lang-go" }
who-lang-ts = { path = "crates/who-lang-ts" }
who-lang-js = { path = "crates/who-lang-js" }

tree-sitter = "0.24"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
anyhow = "1"
thiserror = "2"
