[package]
name = "who-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Semantic code intelligence for humans and AI agents"

[[bin]]
name = "whocall"
path = "src/bin_whocall.rs"

[[bin]]
name = "whoimpl"
path = "src/bin_whoimpl.rs"

[dependencies]
who-core = { workspace = true }
who-lang-rust = { workspace = true }
who-lang-python = { workspace = true }
who-lang-go = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ignore = { workspace = true }
anyhow = { workspace = true }
