[package]
name = "who-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for who — semantic code intelligence"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
ignore = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
